# invoice-parser

./: .gitignore  LICENCE  TODO.md  pyproject.toml  readme.md
src/invoice_parser/: __init__.py  errors.py  export.py  gst.py  invoices.py  items.py  main.py  round.py  table.py  test.py  threads.py
src/invoice_parser_shaiksamad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
