[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice_parser_shaiksamad"
version = "0.1.0"
authors = [
    {name="Shaik Abdus Samad", email="shaiksamad.dev@gmail.com"}
]
description = "A package to parse, process and convert the pdf invoices into excel tables"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Private :: Do Not Upload",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    'PyPDF2 >= 3.0.1',
    'openpyxl >= 3.1.2'
]

[project.urls]
"Homepage" = "https://github.com/shaiksamad/invoice-parser"

